--- a/package.json
+++ b/package.json
@@ -13,35 +13,89 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/common": "^2.3.1",
-    "@angular/compiler": "^2.3.1",
-    "@angular/core": "^2.3.1",
-    "@angular/forms": "^2.3.1",
-    "@angular/http": "^2.3.1",
-    "@angular/platform-browser": "^2.3.1",
-    "@angular/platform-browser-dynamic": "^2.3.1",
-    "@angular/router": "^3.3.1",
-    "core-js": "^2.4.1",
-    "rxjs": "^5.0.1",
-    "ts-helpers": "^1.1.1",
-    "zone.js": "^0.7.2"
+    "@angular/animations": "5.2.5",
+    "@angular/cdk": "5.2.1",
+    "@angular/common": "5.2.5",
+    "@angular/compiler": "5.2.5",
+    "@angular/core": "5.2.5",
+    "@angular/flex-layout": "2.0.0-beta.12",
+    "@angular/forms": "5.2.5",
+    "@angular/http": "5.2.5",
+    "@angular/material": "5.2.1",
+    "@angular/platform-browser": "5.2.5",
+    "@angular/platform-browser-dynamic": "5.2.5",
+    "@angular/platform-server": "5.2.5",
+    "@angular/router": "5.2.5",
+    "angular-cli": "^1.0.0-beta.28.3",
+    "core-js": "^2.5.1",
+    "hammerjs": "2.0.8",
+    "http-server": "^0.9.0",
+    "ie-shim": "^0.1.0",
+    "localize-router": "1.0.0-rc.3",
+    "ng2-dragula": "1.5.0",
+    "ng2-progressbar": "1.2.0",
+    "ng2-validation": "4.0.0",
+    "reflect-metadata": "^0.1.10",
+    "rxjs": "^5.5.2",
+    "ts-md5": "1.2.0",
+    "zone.js": "~0.8.18"
   },
   "devDependencies": {
-    "@angular/compiler-cli": "^2.3.1",
-    "@types/jasmine": "2.5.38",
-    "@types/node": "^6.0.42",
-    "angular-cli": "1.0.0-beta.26",
-    "codelyzer": "~2.0.0-beta.1",
-    "jasmine-core": "2.5.2",
-    "jasmine-spec-reporter": "2.5.0",
-    "karma": "1.2.0",
+    "gulp": "3.9.1",
+    "gulp-watch": "4.3.11",
+    "browser-sync": "2.18.8",
+    "concurrently": "3.3.0",
+    "@angular-devkit/build-optimizer": "^0.0.32",
+    "@angular/compiler-cli": "5.2.5",
+    "@compodoc/compodoc": "^1.0.0-beta.15",
+    "@types/hammerjs": "^2.0.34",
+    "@types/jasmine": "2.5.45",
+    "@types/jquery": "2.0.46",
+    "@types/node": "^7.0.39",
+    "@types/source-map": "^0.5.0",
+    "@types/uglify-js": "^2.6.28",
+    "angular2-template-loader": "^0.6.2",
+    "awesome-typescript-loader": "^3.3.0",
+    "babel": "^6.23.0",
+    "babel-plugin-module-alias": "^1.6.0",
+    "codelyzer": "~2.1.1",
+    "cross-env": "^5.0.0",
+    "css-loader": "^0.28.0",
+    "exports-loader": "^0.6.4",
+    "expose-loader": "^0.7.3",
+    "file-loader": "^0.11.1",
+    "find-root": "^1.0.0",
+    "gh-pages": "^1.0.0",
+    "imports-loader": "^0.7.1",
+    "istanbul-instrumenter-loader": "2.0.0",
+    "jasmine-core": "^2.5.2",
+    "karma": "^1.6.0",
     "karma-chrome-launcher": "^2.0.0",
-    "karma-cli": "^1.0.1",
-    "karma-jasmine": "^1.0.2",
-    "karma-remap-istanbul": "^0.2.1",
-    "protractor": "~4.0.13",
-    "ts-node": "1.2.1",
-    "tslint": "^4.3.0",
-    "typescript": "~2.0.3"
+    "karma-coverage": "^1.1.1",
+    "karma-jasmine": "^1.1.0",
+    "karma-mocha-reporter": "^2.2.3",
+    "karma-remap-coverage": "^0.1.4",
+    "karma-sourcemap-loader": "^0.3.7",
+    "less": "^2.7.2",
+    "less-loader": "^4.0.5",
+    "node-sass": "^4.5.2",
+    "npm-run-all": "^4.0.2",
+    "optimize-js-plugin": "0.0.4",
+    "parse5": "^3.0.2",
+    "protractor": "^5.1.1",
+    "raw-loader": "0.5.1",
+    "rimraf": "~2.6.1",
+    "sass-loader": "^6.0.3",
+    "source-map-loader": "^0.2.1",
+    "string-replace-loader": "~1.3.0",
+    "style-loader": "^0.18.1",
+    "to-string-loader": "^1.1.5",
+    "ts-node": "^3.3.0",
+    "tslib": "^1.7.1",
+    "tslint": "~4.5.1",
+    "tslint-loader": "^3.5.2",
+    "typedoc": "^0.7.1",
+    "typescript": "~2.5.2",
+    "url-loader": "^0.5.8"
   }
 }
